--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
 <body>
 <h1>Hey! It's Bhavna Singh here.</h1>
 <h2>Recently pursuing B.Tech in CSE.</h2>
+<h3>From Hemvati Nandan Garhwal Central University</h3>
 </body>
 </html>
