--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 <h2>Recently pursuing B.Tech in CSE.</h2>
 <h3>From Hemvati Nandan Garhwal Central University</h3>
 <h4>I am familiar with languages C,C++ and python.</h4>
+<p>THIS IS A SAMPLE PROJECT</p>
 </body>
 </html>
