--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
 <head>
 <title>GitAzure</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+  <style>
+    text-align: center;
+  </style>
 <marquee><em>WELCOME TO MY WEBPAGE 👍</em></marquee>
 <h1>Hey! It's Bhavna Singh here.</h1>
 <h2>Recently pursuing B.Tech in CSE.</h2>
