--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<html>
+<!doctype html>
+<html lang="en">
 <head>
 <title>GitAzure</title>
+   <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-</head>
-<body>
   <style>
-    text-align: center;
+ body {
+       background-color: #effcef;
+       text-align: center;
+      }
+    h1 {
+        color: #94d3ac;
+       }
   </style>
+  </head>
+<body>
 <marquee><em>WELCOME TO MY WEBPAGE 👍</em></marquee>
 <h1>Hey! It's Bhavna Singh here.</h1>
 <h2>Recently pursuing B.Tech in CSE.</h2>
